# challenge-bypass-ristretto-ffi

./: .dockerignore  .gitignore  .travis.yml  .valgrind.supp  BUILD.gn  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  config.gni  go.mod  lib.go
.github/workflows/: audit.yml  ci-nightly.yml  ci.yml  clippy.yml  codeql-analysis.yml
examples/: .gitignore
examples/cpp/: main.cpp
examples/golang/: Dockerfile  main.go
src/: lib.h  lib.rs  main.cpp  wrapper.cpp  wrapper.hpp  wrapper_no_exceptions.h  wrapper_no_exceptions_thread_local.cc  wrapper_no_exceptions_thread_local_pointer.cc
