[package]
authors = ["eV <ev@7pr.xyz>"]
name = "challenge-bypass-ristretto-ffi"
version = "1.0.1"

[dependencies]
base64 = "0.22.0"
challenge-bypass-ristretto = { version = "1.0.1", features = ["base64"] }
hmac = "0.10"
rand = "0.7"
sha2 = "0.9"

[lib]
crate-type = [
    "cdylib",
    "staticlib",
    "rlib",
]
name = "challenge_bypass_ristretto_ffi"

[features]
nightly = ["challenge-bypass-ristretto/nightly"]
cbindgen = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
