[package]
authors = ["eV <ev@7pr.xyz>"]
name = "challenge-bypass-ristretto-ffi"
version = "1.0.1"

[dependencies]
base64 = "0.22"
challenge-bypass-ristretto = { git = "https://github.com/acatarineu/challenge-bypass-ristretto", rev = "1e0eb80b1098494cfb44d062fa27f17f78e7be15", features = ["base64"] }
hmac = "0.12"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
sha2 = "0.10"

[lib]
crate-type = [
    "cdylib",
    "staticlib",
    "rlib",
]
name = "challenge_bypass_ristretto_ffi"

[features]
cbindgen = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
