[package]
authors = ["eV <ev@7pr.xyz>"]
name = "challenge-bypass-ristretto-ffi"
version = "1.0.1"
edition = "2018"

[dependencies]
base64 = "0.22"
challenge-bypass-ristretto = { version = "2.0.4", features = ["base64"] }
hmac = "0.12"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
sha2 = "0.10"

[lib]
crate-type = [
    "cdylib",
    "staticlib",
    "rlib",
]
name = "challenge_bypass_ristretto_ffi"

[features]
cbindgen = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
